--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,13 @@
-asgiref==3.3.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-defusedxml==0.6.0
+asgiref==3.4.1
 Django==3.1.6
-django-allauth==0.44.0
-idna==2.10
-install==1.3.4
-oauthlib==3.1.0
-pycparser==2.20
-PyJWT==2.0.1
-python-dateutil==2.8.1
-python3-openid==3.2.0
-pytz==2021.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-six==1.15.0
-sqlparse==0.4.1
-urllib3==1.26.3
+joblib==1.1.0
+numpy==1.21.3
+packaging==21.2
+pip-check-reqs==2.3.2
+pyparsing==2.4.7
+pytz==2021.3
+scikit-learn==0.24.2
+scipy==1.7.1
+sqlparse==0.4.2
+threadpoolctl==3.0.0
+typing-extensions==3.10.0.2
